--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="l_v_et">Ləğv et</string>
     <string name="_60_00_azn">60.00 AZN</string>
     <string name="_123456789">123456789</string>
+    <string name="cancel">Cancel</string>
 </resources>
