--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="_60_00_azn">60.00 AZN</string>
     <string name="_123456789">123456789</string>
     <string name="cancel">Cancel</string>
+    <string name="m_bl_i_daxil_edin">Məbləği daxil edin</string>
 </resources>
